# docling-serve

./: .env.example  .gitignore  .gitlab-ci.yml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Containerfile  Containerfile.sbom  Dockerfile  Makefile  README.md  check_gpu.py  docker-compose.yaml  grpc_architecture_notes.md  models_download.py  os-packages.txt  pyproject.toml  render.yaml  serve  start_server.sh  start_worker.sh
.github/: image-matrix.json
.github/scripts/: release.sh
.github/workflows/: _docker-build.yaml  cd.yml  ci-images-dryrun.yml  ci.yml  docker.yaml  images.yml  job-checks.yml  job-image.yml  pypi.yml
customization/: README.md  build.sh  common.py  create_autoscaling.py  create_endpoint.py  push.sh  restart_endpoint.py  test_docling.py  test_endpoint.py
docling-serve-client/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docling-serve-client/docling/service_client/: client.py  job.py  watchers.py
docling-serve-client/examples/: README.md  batch_and_chunk.py  convert_compat.py  docling_service_client_file_quickstart.ipynb  task_api.py
docling-serve-client/tests/: test_client_integration.py  test_client_sdk_unit.py
docling_serve/: __main__.py  app.py  auth.py  capacity.py  docling_conversion.py  gradio_ui.py  helper_functions.py  logging_config.py  orchestrator_factory.py  otel_instrumentation.py  policy.py  ray_metrics_collector.py  resource_rewriter.py  response_preparation.py  rq_instrumentation.py  rq_job_wrapper.py  rq_metrics_collector.py  settings.py  websocket_notifier.py  ws_convert.py
docling_serve/api/: __init__.py  ingest.py
docling_serve/core/: __init__.py  models.py
docling_serve/datamodel/: callback.py  convert.py  (+4 more)
docs/: README.md  configuration.md  deployment.md  gitlab-runner-setup.md  grpc_descriptor_api_guide.md  grpc_schema_validation.md  mcp.md  metrics.md  models.md  pre-loading-models.md  ray-orchestrator-architecture-page-slicing-delta.md  ray-orchestrator-architecture.md  usage.md
examples/: OTEL.md  split_processing.py
scripts/: convert_cdx16_sbom_json2xlsx.py  gen_grpc.py  update_doc_usage.py
tests/: e2e_grpc_client.py  e2e_grpcurl.sh  test_1-file-all-outputs.py  test_1-file-async.py  test_1-url-all-outputs.py  test_1-url-async-ws.py  test_1-url-async.py  test_2-files-all-outputs.py  test_2-urls-all-outputs.py  test_backpressure.py  test_batch_endpoint.py  test_config_file_loading.py  test_docling_document_converter.py  test_docling_e2e_via_grpc.py  test_env_parsing.py  test_error_message_propagation.py  test_field_items_conversion.py  test_grpc_mapping.py  test_grpc_serve.py  test_grpc_service_fake.py  test_health_probes.py  test_layout_model.py  test_metrics_seprate_server.py  test_orchestrator_factory_slice_parallelism.py  test_ray_metrics_collector.py  test_redis_sentinel_settings.py  test_results_clear.py  test_schema_validator.py  test_service_policy.py  test_ws_convert.py  test_ws_convert_models.py  test_ws_live.py  test_ws_result_sender.py  test_ws_upload_helper.py  test_zombie_task_cleanup.py
(+48 files in other folders)
